switching nav menu

--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
 </head>
 <body>
   <iframe src="" frameborder="0"></iframe>
+  <nav>
+    <button onClick="switchIframe(1)">1</button>
+    <button onClick="switchIframe(2)">2</button>
+    <button onClick="switchIframe(3)">3</button>
+    <button onClick="switchIframe(4)">4</button>
+    <button onClick="switchIframe(5)">5</button>
+  </nav>
 </body>
 </html>
