--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
   <iframe src="" frameborder="0"></iframe>
   <nav>
-    <button onClick="switchIframe(1)">1</button>
-    <button onClick="switchIframe(2)">2</button>
-    <button onClick="switchIframe(3)">3</button>
-    <button onClick="switchIframe(4)">4</button>
-    <button onClick="switchIframe(5)">5</button>
+    <button onClick="switchIframe(design_steam)">1</button>
+    <button onClick="switchIframe(design_fortnite)">2</button>
+    <button onClick="switchIframe(_design)">3</button>
+    <button onClick="switchIframe(_design)">4</button>
+    <button onClick="switchIframe(_design)">5</button>
   </nav>
 </body>
 </html>
