steam design update
design nav menu upgrade

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
   <iframe src="" frameborder="0"></iframe>
   <nav>
-    <button onClick="switchIframe(design_steam)">1</button>
-    <button onClick="switchIframe(design_fortnite)">2</button>
-    <button onClick="switchIframe(_design)">3</button>
-    <button onClick="switchIframe(_design)">4</button>
-    <button onClick="switchIframe(_design)">5</button>
+    <button onClick="switchIframe('design_steam', this)"><img src="images/Steam_icon_logo.png" alt=""></button>
+    <button onClick="switchIframe('design_fortnite', this)"><img src="images/Fortnite_icon_logo.jpg" alt=""></button>
+    <button onClick="switchIframe('_design', this)"><img src="images/Filmino_icon_logo.png" alt=""></button>
+    <button onClick="switchIframe('_design', this)"><img src="images/Filmino_icon_logo.png" alt=""></button>
+    <button onClick="switchIframe('_design', this)"><img src="images/React_icon_logo.png" alt=""></button>
   </nav>
 </body>
 </html>
