--- a/design_steam/index.html
+++ b/design_steam/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="cz" dir="ltr">
 <head>
-  <title>Základní layout</title>
   <meta charset="UTF-8">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  
+  <title>Steam</title>
+
   <link rel="stylesheet" href="styles/layout.css" type="text/css">
-  <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
 </head>
 <body>
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Základní layout1</a></h1>
-      <h2>Testovací stránka pro výuku webdesignu</h2>
+      <h1><a href="#"><img src="images/logo_steam.svg"></a></h1>
     </div>
-    <form action="#" method="post">
-      <fieldset>
-        <legend>Hledat:</legend>
-        <input type="text" value="Prohledej naší stránku&hellip;" onFocus="this.value=(this.value=='Prohledej naší stránku&hellip;')? '' : this.value ;">
-        <input type="submit" id="sf_submit" value="submit">
-      </fieldset>
-    </form>
     <nav>
       <ul>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li class="last"><a href="#">Text Link</a></li>
+        <li><a href="#">Váš obchod</a></li>
+        <li><a href="#">Nové a zajímavé</a></li>
+        <li><a href="#">Kategorie</a></li>
+        <li><a href="#">Věrnostní obchod</a></li>
+        <li class="last"><a href="#">Novinky</a></li>
       </ul>
+      <form action="#" method="post">
+        <fieldset>
+          <legend>Hledat:</legend>
+          <input type="text" placeholder="hledat">
+          <input type="submit" id="sf_submit" value="Q">
+        </fieldset>
+      </form>
     </nav>
   </header>
 </div>
@@ -36,11 +40,17 @@
   <div id="container" class="clear">
     <!-- slider -->
     <section id="slider" class="clear">
-      <figure><img src="images/demo/630x300.gif" alt="">
+      <figure><img src="images/counter-strike-main.jpg" alt="">
         <figcaption>
-          <h2>Eu justo augue estas</h2>
-          <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.</p>
-          <footer class="more"><a href="#">Číst více &raquo;</a></footer>
+          <h2>Counter-Strike 2</h2>
+          <p>
+            <img src="images/counter-strike-1.jpg" alt="">
+            <img src="images/counter-strike-2.jpg" alt="">
+            <img src="images/counter-strike-3.jpg" alt="">
+            <img src="images/counter-strike-4.jpg" alt="">
+          </p>
+          <h3>Nyní dostupné</h3>
+          <footer class="more"><a href="#">Nejprodávanější</a></footer>
         </figcaption>
       </figure>
     </section>
