--- a/design_steam/index.html
+++ b/design_steam/index.html
@@ -59,9 +59,8 @@
       <section class="clear">
         <!-- článek 1 -->
         <article class="two_quarter">
-          <h2>Lorum ipsum dolor</h2>
+          <h2>Přátelé</h2>
           <p>ullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum. </p>
-          <p>ullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.</p>
         </article>
         <!-- článek 2 -->
         <article class="two_quarter lastbox">
@@ -71,7 +70,7 @@
               <li><a href="#"><img src="images/demo/130x130.gif" width="130" height="130" alt=""></a></li>
               <li class="last"><a href="#"><img src="images/demo/130x130.gif" width="130" height="130" alt=""></a></li>
             </ul>
-            <figcaption><a href="#">Podívej se na galerii &raquo;</a></figcaption>
+            <figcaption><a href="#">Seznam přátel</a></figcaption>
           </figure>
         </article>
       </section>
@@ -99,17 +98,17 @@
         <h2 class="title">Odkazy</h2>
         <nav>
           <ul>
-            <li><a href="#">Lorem ipsum dolor sit</a></li>
-            <li><a href="#">Amet consectetur</a></li>
-            <li><a href="#">Praesent vel sem id</a></li>
-            <li><a href="#">Curabitur hendrerit est</a></li>
-            <li class="last"><a href="#">Sed a nulla urna</a></li>
+            <li><a href="#">Váš obchod</a></li>
+            <li><a href="#">Nové a zajímavé</a></li>
+            <li><a href="#">Kategorie</a></li>
+            <li><a href="#">Věrnostní obchod</a></li>
+            <li class="last"><a href="#">Novinky</a></li>
           </ul>
         </nav>
       </section>
       <section class="two_quarter lastbox">
         <h2 class="title">O Nás</h2>
-        <img class="imgl" src="images/demo/130x130.gif" width="130" height="130" alt="">
+        <img class="imgl" src="images/Steam_icon_logo.png" width="130" height="130" alt="">
         <p>Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit.</p>
         <footer class="more"><a href="#">Číst více &raquo;</a></footer>
       </section>
@@ -120,8 +119,8 @@
 <!-- Patička -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Název domény</a></p>
-    <p class="fl_right">Jméno a příjmení</p>
+    <p class="fl_left"><img src="images/footerLogo_valve_new.png"> &copy; 2024 Valve Corporation.</p>
+    <p class="fl_right">Lukáš Merta</p>
   </footer>
 </div>
 </body>
