--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   <nav>
     <button onClick="switchIframe('design_steam', this)"><img src="images/Steam_icon_logo.png" alt=""></button>
     <button onClick="switchIframe('design_fortnite', this)"><img src="images/Fortnite_icon_logo.jpg" alt=""></button>
-    <button onClick="switchIframe('_design', this)"><img src="images/Filmino_icon_logo.png" alt=""></button>
     <button onClick="switchIframe('_design', this)"><img src="images/React_icon_logo.png" alt=""></button>
+    <button onClick="switchIframe('_design', this)"><img src="images/Filmino_icon_logo.png" alt=""></button>
+    <div class="divider"></div>
+    <a href="https://github.com/l-merta/tws-layout-design" target="_blank"><img src="images/Github_icon_logo.png" alt=""></a>
   </nav>
 </body>
 </html>
