--- a/design_fortnite/index.html
+++ b/design_fortnite/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="cz" dir="ltr">
 <head>
-  <title>Základní layout</title>
   <meta charset="UTF-8">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <title>Design - Fortnite</title>
+
   <link rel="stylesheet" href="styles/layout.css" type="text/css">
-  <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
 </head>
 <body>
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Základní layout2</a></h1>
-      <h2>Testovací stránka pro výuku webdesignu</h2>
+      <h1><a href="#"><img src="images/Fortnite_logo.svg" alt=""></a></h1>
     </div>
     <form action="#" method="post">
       <fieldset>
         <legend>Hledat:</legend>
-        <input type="text" value="Prohledej naší stránku&hellip;" onFocus="this.value=(this.value=='Prohledej naší stránku&hellip;')? '' : this.value ;">
+        <input type="text" placeholder="Search">
         <input type="submit" id="sf_submit" value="submit">
       </fieldset>
     </form>
