--- a/design_fortnite/index.html
+++ b/design_fortnite/index.html
@@ -26,11 +26,13 @@
     </form>
     <nav>
       <ul>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li class="last"><a href="#">Text Link</a></li>
+        <li><a href="#">Discover</a></li>
+        <li><a href="#">My Library</a></li>
+        <li><a href="#">Create</a></li>
+        <li><a href="#">Item Shop</a></li>
+        <li><a href="#">Battle Pass</a></li>
+        <li><a href="#">News</a></li>
+        <li class="last"><a href="#">More</a></li>
       </ul>
     </nav>
   </header>
@@ -40,11 +42,11 @@
   <div id="container" class="clear">
     <!-- slider -->
     <section id="slider" class="clear">
-      <figure><img src="images/demo/630x300.gif" alt="">
+      <figure><img src="images/gameplay.gif" alt="">
         <figcaption>
-          <h2>Eu justo augue estas</h2>
-          <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.</p>
-          <footer class="more"><a href="#">Číst více &raquo;</a></footer>
+          <h2>Jump into the Action!</h2>
+          <p>Get ready to explore, build, and battle it out in the ultimate survival showdown.</p>
+          <footer class="more"><a href="#" class="fort-button">PLAY NOW</a></footer>
         </figcaption>
       </figure>
     </section>
@@ -53,19 +55,18 @@
       <section class="clear">
         <!-- článek 1 -->
         <article class="two_quarter">
-          <h2>Lorum ipsum dolor</h2>
-          <p>ullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum. </p>
-          <p>ullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.</p>
+          <h2>Discover the Item Shop</h2>
+          <p>Upgrade your style and gear up with exclusive outfits, emotes, and items refreshed daily. Stand out on the battlefield with unique looks and express yourself in every match!</p>
         </article>
         <!-- článek 2 -->
         <article class="two_quarter lastbox">
           <figure>
             <ul class="clear">
-              <li><a href="#"><img src="images/demo/130x130.gif" width="130" height="130" alt=""></a></li>
-              <li><a href="#"><img src="images/demo/130x130.gif" width="130" height="130" alt=""></a></li>
-              <li class="last"><a href="#"><img src="images/demo/130x130.gif" width="130" height="130" alt=""></a></li>
+              <li><a href="#"><img src="images/item-1.PNG" width="130" height="130" alt=""></a></li>
+              <li><a href="#"><img src="images/item-2.PNG" width="130" height="130" alt=""></a></li>
+              <li class="last"><a href="#"><img src="images/item-3.PNG" width="130" height="130" alt=""></a></li>
             </ul>
-            <figcaption><a href="#">Podívej se na galerii &raquo;</a></figcaption>
+            <figcaption><a href="#" class="fort-button">GO TO ITEM SHOP</a></figcaption>
           </figure>
         </article>
       </section>
