--- a/design_steam/index.html
+++ b/design_steam/index.html
@@ -112,7 +112,7 @@
 <!-- Patička -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left"><img src="images/footerLogo_valve_new.png"> &copy; 2024 Valve Corporation.</p>
+    <p class="fl_left"><img src="images/footerLogo_valve_new.png"> &copy; 2024 Valve Corporation</p>
     <p class="fl_right" style="margin-top: 6px;">Lukáš Merta</p>
   </footer>
 </div>
