--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <iframe src="" frameborder="0"></iframe>
   <nav>
-    <button onClick="switchIframe('design_steam', this)"><img src="images/Steam_icon_logo.png" alt=""></button>
-    <button onClick="switchIframe('design_fortnite', this)"><img src="images/Fortnite_icon_logo.jpg" alt=""></button>
-    <button onClick="switchIframe('_design', this)"><img src="images/React_icon_logo.png" alt=""></button>
-    <button onClick="switchIframe('_design', this)"><img src="images/Filmino_icon_logo.png" alt=""></button>
+    <button onClick="switchIframe(1)"><img src="images/Steam_icon_logo.png" alt=""></button>
+    <button onClick="switchIframe(2)"><img src="images/Fortnite_icon_logo.png" alt=""></button>
+    <button onClick="switchIframe(0)"><img src="images/React_icon_logo.png" alt=""></button>
+    <button onClick="switchIframe(0)"><img src="images/Filmino_icon_logo.png" alt=""></button>
     <div class="divider"></div>
     <a href="https://github.com/l-merta/tws-layout-design" target="_blank"><img src="images/Github_icon_logo.png" alt=""></a>
   </nav>
