--- a/design_react/index.html
+++ b/design_react/index.html
@@ -10,7 +10,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Základní layout</a></h1>
+      <h1><a href="#">React - design</a></h1>
       <h2>Testovací stránka pro výuku webdesignu</h2>
     </div>
     <form action="#" method="post">
