--- a/design_filmino/index.html
+++ b/design_filmino/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="cz" dir="ltr">
 <head>
-  <title>Základní layout</title>
   <meta charset="UTF-8">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
+  <title>Filmino - design</title>
+
   <link rel="stylesheet" href="styles/layout.css" type="text/css">
-  <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
 </head>
 <body>
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Základní layout</a></h1>
-      <h2>Testovací stránka pro výuku webdesignu</h2>
+      <h1><a href="#">Filmíno</a></h1>
     </div>
     <form action="#" method="post">
       <fieldset>
         <legend>Hledat:</legend>
-        <input type="text" value="Prohledej naší stránku&hellip;" onFocus="this.value=(this.value=='Prohledej naší stránku&hellip;')? '' : this.value ;">
-        <input type="submit" id="sf_submit" value="submit">
+        <input type="text" placeholder="">
+        <input type="submit" id="sf_submit" value="Hledat">
       </fieldset>
     </form>
     <nav>
       <ul>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li class="last"><a href="#">Text Link</a></li>
+        <li><a href="#" style="color: var(--c4);">Filmy</a></li>
+        <li class="last"><a href="#">Seriály</a></li>
       </ul>
     </nav>
   </header>
@@ -110,8 +111,8 @@
 <!-- Patička -->
 <div class="wrapper row3">
   <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Název domény</a></p>
-    <p class="fl_right">Jméno a příjmení</p>
+    <p class="fl_left">&copy; 2024 Filmíno</p>
+    <p class="fl_right">Lukáš Merta</p>
   </footer>
 </div>
 </body>
