--- a/design_filmino/index.html
+++ b/design_filmino/index.html
@@ -37,11 +37,11 @@
   <div id="container" class="clear">
     <!-- slider -->
     <section id="slider" class="clear">
-      <figure><img src="images/demo/630x300.gif" alt="">
+      <figure><img src="images/main.jpg" alt="">
         <figcaption>
-          <h2>Eu justo augue estas</h2>
-          <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.</p>
-          <footer class="more"><a href="#">Číst více &raquo;</a></footer>
+          <h2>Transformers One</h2>
+          <p>Odhalte původ jejich rivality</p>
+          <footer class="more"><a href="#" class="filmino-button">SLEDOVAT FILM</a></footer>
         </figcaption>
       </figure>
     </section>
@@ -50,19 +50,18 @@
       <section class="clear">
         <!-- článek 1 -->
         <article class="two_quarter">
-          <h2>Lorum ipsum dolor</h2>
-          <p>ullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum. </p>
-          <p>ullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat adipiscinia pellentum leo.</p>
+          <h2>Nejhledanější herci</h2>
+          <p>Seznamte se s hvězdami, které přitahují nejvíce pozornosti! Od ikonických tváří až po nové talenty – objevte herce, kteří aktuálně kralují filmovému světu. Prozkoumejte jejich kariéru, nejznámější role a připravované projekty, které stojí za to sledovat!</p>
         </article>
         <!-- článek 2 -->
         <article class="two_quarter lastbox">
           <figure>
             <ul class="clear">
-              <li><a href="#"><img src="images/demo/130x130.gif" width="130" height="130" alt=""></a></li>
-              <li><a href="#"><img src="images/demo/130x130.gif" width="130" height="130" alt=""></a></li>
-              <li class="last"><a href="#"><img src="images/demo/130x130.gif" width="130" height="130" alt=""></a></li>
+              <li><a href="#"><img src="images/actor_1.jpg" width="130" height="130" alt=""></a></li>
+              <li><a href="#"><img src="images/actor_2.jpg" width="130" height="130" alt=""></a></li>
+              <li class="last"><a href="#"><img src="images/actor_3.jpg" width="130" height="130" alt=""></a></li>
             </ul>
-            <figcaption><a href="#">Podívej se na galerii &raquo;</a></figcaption>
+            <figcaption><a href="#" class="filmino-button filmino-button-mid">Seznam herců</a></figcaption>
           </figure>
         </article>
       </section>
