--- a/design_filmino/index.html
+++ b/design_filmino/index.html
@@ -15,7 +15,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#">Filmíno</a></h1>
+      <h1><a href="https://merta.soskolin.eu/vlastni/filmino/filmy">Filmíno</a></h1>
     </div>
     <form action="#" method="post">
       <fieldset>
@@ -26,8 +26,8 @@
     </form>
     <nav>
       <ul>
-        <li><a href="#" style="color: var(--c4);">Filmy</a></li>
-        <li class="last"><a href="#">Seriály</a></li>
+        <li><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/" style="color: var(--c4);">Filmy</a></li>
+        <li class="last"><a href="https://merta.soskolin.eu/vlastni/filmino/serialy/">Seriály</a></li>
       </ul>
     </nav>
   </header>
@@ -41,7 +41,7 @@
         <figcaption>
           <h2>Transformers One</h2>
           <p>Odhalte původ jejich rivality</p>
-          <footer class="more"><a href="#" class="filmino-button">SLEDOVAT FILM</a></footer>
+          <footer class="more"><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/video.html?id=698687" class="filmino-button">SLEDOVAT FILM</a></footer>
         </figcaption>
       </figure>
     </section>
@@ -57,11 +57,11 @@
         <article class="two_quarter lastbox">
           <figure>
             <ul class="clear">
-              <li><a href="#"><img src="images/actor_1.jpg" width="130" height="130" alt=""></a></li>
-              <li><a href="#"><img src="images/actor_2.jpg" width="130" height="130" alt=""></a></li>
-              <li class="last"><a href="#"><img src="images/actor_3.jpg" width="130" height="130" alt=""></a></li>
+              <li><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/herec.html?id=2231"><img src="images/actor_1.jpg" width="130" height="130" alt=""></a></li>
+              <li><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/herec.html?id=3223"><img src="images/actor_2.jpg" width="130" height="130" alt=""></a></li>
+              <li class="last"><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/herec.html?id=287"><img src="images/actor_3.jpg" width="130" height="130" alt=""></a></li>
             </ul>
-            <figcaption><a href="#" class="filmino-button filmino-button-mid">Seznam herců</a></figcaption>
+            <figcaption><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/" class="filmino-button filmino-button-mid">Seznam herců</a></figcaption>
           </figure>
         </article>
       </section>
