--- a/design_filmino/index.html
+++ b/design_filmino/index.html
@@ -74,17 +74,17 @@
       <section class="one_quarter">
         <h2 class="title">Populární filmy</h2>
         <p>Podívejte se na filmy, které teď vládnou plátnům i streamovacím službám. Inspirujte se k dalšímu filmovému večeru!</p>
-        <footer class="more"><a href="#" class="filmino-button filmino-button-mid">Populární filmy</a></footer>
+        <footer class="more"><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/" class="filmino-button filmino-button-mid">Populární filmy</a></footer>
       </section>
       <section class="one_quarter">
         <h2 class="title">Populární žánry</h2>
         <nav>
           <ul>
-            <li><a href="#" class="filmino-button filmino-button-small">Akční</a></li>
-            <li><a href="#" class="filmino-button filmino-button-small">Animovaný</a></li>
-            <li><a href="#" class="filmino-button filmino-button-small">Rodinný</a></li>
-            <li><a href="#" class="filmino-button filmino-button-small">Komedie</a></li>
-            <li class="last"><a href="#" class="filmino-button filmino-button-small">Horor</a></li>
+            <li><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/zanr.html?id=28&name=Ak%C4%8Dn%C3%AD" class="filmino-button filmino-button-small">Akční</a></li>
+            <li><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/zanr.html?id=16&name=Animovan%C3%BD" class="filmino-button filmino-button-small">Animovaný</a></li>
+            <li><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/zanr.html?id=10751&name=Rodinn%C3%BD" class="filmino-button filmino-button-small">Rodinný</a></li>
+            <li><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/zanr.html?id=35&name=Komedie" class="filmino-button filmino-button-small">Komedie</a></li>
+            <li class="last"><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/zanr.html?id=27&name=Horor" class="filmino-button filmino-button-small">Horor</a></li>
           </ul>
         </nav>
       </section>
@@ -92,7 +92,7 @@
         <h2 class="title">O Nás</h2>
         <img class="imgl" src="../images/Filmino_icon_logo.png" width="130" height="130" alt="">
         <p>Naše stránka je vytvořena pro všechny filmové a seriálové nadšence, kteří hledají jednoduchý způsob, jak objevovat nový obsah. Umožňujeme vám snadno najít oblíbené filmy a seriály podle žánru, názvu, herce nebo doporučení na základě podobnosti. Snažíme se přinášet aktuální informace a inspiraci pro každého, kdo miluje příběhy na obrazovce!</p>
-        <footer class="more"><a href="#" class="filmino-button filmino-button-mid">Číst více</a></footer>
+        <footer class="more"><a href="https://merta.soskolin.eu/vlastni/filmino/filmy/" class="filmino-button filmino-button-mid">Číst více</a></footer>
       </section>
     </div>
     <!-- / obsah těla -->
