--- a/design_fortnite/index.html
+++ b/design_fortnite/index.html
@@ -15,7 +15,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#"><img src="images/Fortnite_logo.svg" alt=""></a></h1>
+      <h1><a href="https://www.fortnite.com/?lang=en-US"><img src="images/Fortnite_logo.svg" alt=""></a></h1>
     </div>
     <form action="#" method="post">
       <fieldset>
@@ -26,13 +26,13 @@
     </form>
     <nav>
       <ul>
-        <li><a href="#">Discover</a></li>
-        <li><a href="#">My Library</a></li>
-        <li><a href="#">Create</a></li>
-        <li><a href="#">Item Shop</a></li>
-        <li><a href="#">Battle Pass</a></li>
-        <li><a href="#">News</a></li>
-        <li class="last"><a href="#">More</a></li>
+        <li><a href="https://www.fortnite.com/?lang=en-US">Discover</a></li>
+        <li><a href="https://www.fortnite.com/my-library?lang=en-US">My Library</a></li>
+        <li><a href="https://www.fortnite.com/create?lang=en-US">Create</a></li>
+        <li><a href="https://www.fortnite.com/item-shop?lang=en-US">Item Shop</a></li>
+        <li><a href="https://www.fortnite.com/battle-pass?lang=en-US">Battle Pass</a></li>
+        <li><a href="https://www.fortnite.com/news?lang=en-US">News</a></li>
+        <li class="last"><a href="https://www.fortnite.com/fortnite-crew-subscription?lang=en-US">More</a></li>
       </ul>
     </nav>
   </header>
@@ -46,7 +46,7 @@
         <figcaption>
           <h2>Jump into the Action!</h2>
           <p>Get ready to explore, build, and battle it out in the ultimate survival showdown.</p>
-          <footer class="more"><a href="#" class="fort-button">PLAY NOW</a></footer>
+          <footer class="more"><a href="https://store.epicgames.com/en-US/p/fortnite" class="fort-button">PLAY NOW</a></footer>
         </figcaption>
       </figure>
     </section>
@@ -62,11 +62,11 @@
         <article class="two_quarter lastbox">
           <figure>
             <ul class="clear">
-              <li><a href="#"><img src="images/item-1.PNG" width="130" height="130" alt=""></a></li>
-              <li><a href="#"><img src="images/item-2.PNG" width="130" height="130" alt=""></a></li>
-              <li class="last"><a href="#"><img src="images/item-3.PNG" width="130" height="130" alt=""></a></li>
+              <li><a href="https://www.fortnite.com/item-shop?lang=en-US"><img src="images/item-1.PNG" width="130" height="130" alt=""></a></li>
+              <li><a href="https://www.fortnite.com/item-shop?lang=en-US"><img src="images/item-2.PNG" width="130" height="130" alt=""></a></li>
+              <li class="last"><a href="https://www.fortnite.com/item-shop?lang=en-US"><img src="images/item-3.PNG" width="130" height="130" alt=""></a></li>
             </ul>
-            <figcaption><a href="#" class="fort-button">GO TO ITEM SHOP</a></figcaption>
+            <figcaption><a href="https://www.fortnite.com/item-shop?lang=en-US" class="fort-button">GO TO ITEM SHOP</a></figcaption>
           </figure>
         </article>
       </section>
@@ -81,26 +81,26 @@
         <img class="imgl" src="images/Epic_Games_logo.png" width="130" height="150" alt="">
         <p>Epic Games is a leading interactive entertainment company and provider of 3D engine technology. Creators of Fortnite, Epic Games continually pushes the boundaries of what’s possible in gaming. Our Unreal Engine powers the industry’s most advanced 3D graphics, allowing developers around the globe to craft groundbreaking experiences.
         </p>
-        <footer class="more"><a href="#" class="fort-button fort-button-small">READ MORE</a></footer>
+        <footer class="more"><a href="https://store.epicgames.com/en-US/" class="fort-button fort-button-small">READ MORE</a></footer>
       </section>
       <section class="one_quarter">
         <h2 class="title">Blog</h2>
         <article>
           <p>Stay updated with the latest news, tips, and insights from the world of Fortnite and Epic Games. From patch notes and upcoming events to deep dives into game development and exclusive creator spotlights, our blog is your source for everything Fortnite. Join the community, explore new strategies, and get a sneak peek into what’s next!</p>
-          <footer class="more"><a href="#" class="fort-button fort-button-small">READ MORE</a></footer>
+          <footer class="more"><a href="https://store.epicgames.com/en-US/" class="fort-button fort-button-small">READ MORE</a></footer>
         </article>
       </section>
       <section class="one_quarter">
         <h2 class="title">Links</h2>
         <nav>
           <ul>
-            <li><a href="#">Discover</a></li>
-            <li><a href="#">My Library</a></li>
-            <li><a href="#">Create</a></li>
-            <li><a href="#">Item Shop</a></li>
-            <li><a href="#">Battle Pass</a></li>
-            <li><a href="#">News</a></li>
-            <li class="last"><a href="#">More</a></li>
+            <li><a href="https://www.fortnite.com/?lang=en-US">Discover</a></li>
+            <li><a href="https://www.fortnite.com/my-library?lang=en-US">My Library</a></li>
+            <li><a href="https://www.fortnite.com/create?lang=en-US">Create</a></li>
+            <li><a href="https://www.fortnite.com/item-shop?lang=en-US">Item Shop</a></li>
+            <li><a href="https://www.fortnite.com/battle-pass?lang=en-US">Battle Pass</a></li>
+            <li><a href="https://www.fortnite.com/news?lang=en-US">News</a></li>
+            <li class="last"><a href="https://www.fortnite.com/fortnite-crew-subscription?lang=en-US">More</a></li>
           </ul>
         </nav>
       </section>
