--- a/design_steam/index.html
+++ b/design_steam/index.html
@@ -15,15 +15,15 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <div id="hgroup">
-      <h1><a href="#"><img src="images/logo_steam.svg"></a></h1>
+      <h1><a href="https://store.steampowered.com/"><img src="images/logo_steam.svg"></a></h1>
     </div>
     <nav>
       <ul>
-        <li><a href="#">Váš obchod</a></li>
-        <li><a href="#">Nové a zajímavé</a></li>
-        <li><a href="#">Kategorie</a></li>
-        <li><a href="#">Věrnostní obchod</a></li>
-        <li class="last"><a href="#">Novinky</a></li>
+        <li><a href="https://store.steampowered.com/?snr=1_4_4__12">Váš obchod</a></li>
+        <li><a href="https://store.steampowered.com/charts/topselling/?snr=1_4_4__12">Nové a zajímavé</a></li>
+        <li><a href="https://store.steampowered.com/genre/Early%20Access/?snr=1_4_4__12">Kategorie</a></li>
+        <li><a href="https://store.steampowered.com/points/?snr=1_4_4__12">Věrnostní obchod</a></li>
+        <li class="last"><a href="https://store.steampowered.com/news/?snr=1_4_4__12">Novinky</a></li>
       </ul>
       <form action="#" method="post">
         <fieldset>
@@ -39,7 +39,7 @@
 <div class="wrapper row2">
   <div id="container" class="clear">
     <!-- slider -->
-    <section id="slider" class="clear">
+    <a href="https://store.steampowered.com/app/730/CounterStrike_2?snr=1_7_15__13" class="slider-a"><section id="slider" class="clear">
       <figure><img src="images/counter-strike-main.jpg" alt="">
         <figcaption>
           <h2>Counter-Strike 2</h2>
@@ -53,7 +53,7 @@
           <footer class="more"><a href="#">Nejprodávanější</a></footer>
         </figcaption>
       </figure>
-    </section>
+    </section></a>
     <!-- hlavní obsah -->
     <div id="intro">
       <section class="clear">
@@ -70,7 +70,7 @@
               <li><a href="#"><img src="images/profile_pic_2.jpg" width="130" height="130" alt=""></a></li>
               <li class="last"><a href="#"><img src="images/profile_pic_3.jpg" width="130" height="130" alt=""></a></li>
             </ul>
-            <figcaption><a href="#" class="steam-button">Seznam přátel</a></figcaption>
+            <figcaption><a href="https://steamcommunity.com/" class="steam-button">Seznam přátel</a></figcaption>
           </figure>
         </article>
       </section>
@@ -84,18 +84,18 @@
         <h2 class="title">Blog</h2>
         <article>
           <p>V našem blogu najdete aktuality z herního světa, nové tituly, exkluzivní slevy a zajímavé rozhovory s vývojáři. Zůstaňte s námi v obraze a objevte nové trendy a technologie, které formují budoucnost hraní na Steamu.</p>
-          <footer class="more"><a href="#" class="steam-button">Číst více</a></footer>
+          <footer class="more"><a href="https://store.steampowered.com/" class="steam-button">Číst více</a></footer>
         </article>
       </section>
       <section class="one_quarter">
         <h2 class="title">Odkazy</h2>
         <nav>
           <ul>
-            <li><a href="#" class="steam-button-2">Váš obchod</a></li>
-            <li><a href="#" class="steam-button-2">Kategorie</a></li>
-            <li><a href="#" class="steam-button-2">Nové a zajímavé</a></li>
-            <li><a href="#" class="steam-button-2">Věrnostní obchod</a></li>
-            <li class="last"><a href="#" class="steam-button-2">Novinky</a></li>
+            <li><a href="https://store.steampowered.com/?snr=1_4_4__12" class="steam-button-2">Váš obchod</a></li>
+            <li><a href="https://store.steampowered.com/charts/topselling/?snr=1_4_4__12" class="steam-button-2">Nové a zajímavé</a></li>
+            <li><a href="https://store.steampowered.com/genre/Early%20Access/?snr=1_4_4__12" class="steam-button-2">Kategorie</a></li>
+            <li><a href="https://store.steampowered.com/points/?snr=1_4_4__12" class="steam-button-2">Věrnostní obchod</a></li>
+            <li class="last"><a href="https://store.steampowered.com/news/?snr=1_4_4__12" class="steam-button-2">Novinky</a></li>
           </ul>
         </nav>
       </section>
@@ -103,7 +103,7 @@
         <h2 class="title">O Nás</h2>
         <img class="imgl" src="images/Steam_icon_logo.png" width="130" height="130" alt="">
         <p>Steam je platforma, která revolučním způsobem změnila, jak si užíváme digitální zábavu. Od svého vzniku nabízí uživatelům jednoduchý přístup k tisícům her a aplikací, a to vše na jednom místě. Naším cílem je přinášet kvalitní obsah a spojovat hráče po celém světě. Neustále pracujeme na nových funkcích, které posouvají hraní na novou úroveň.</p>
-        <footer class="more"><a href="#" class="steam-button">Číst více</a></footer>
+        <footer class="more"><a href="https://store.steampowered.com/" class="steam-button">Číst více</a></footer>
       </section>
     </div>
     <!-- / obsah těla -->
