iframe remove until http/s error fixed

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
   <link rel="stylesheet" href="index.css" type="text/css">
 
-  <script src="main.js" defer></script>
+  <script src="main.js?v=1.0.6" defer></script>
 </head>
 <body>
+  <p>Kvůli http/s erroru jenom linky na design místo iframe</p>
   <iframe src="" frameborder="0"></iframe>
   <nav>
     <button onClick="switchIframe(1)"><img src="images/Steam_icon_logo.png" alt=""></button>
