--- a/design_filmino/index.html
+++ b/design_filmino/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
   <title>Filmino - design</title>
+  <link rel="shortcut icon" href="../images/Filmino_icon_logo.png" type="image/x-icon">
 
   <link rel="stylesheet" href="styles/layout.css" type="text/css">
 </head>
